--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 const resultDiv = document.getElementById('result');
                 resultDiv.classList.remove('hidden');
 
-                if (status === 'etiqueta_ok') {
+                if (status === 'ok') {
                     resultDiv.className = 'mt-4 p-4 rounded-lg text-center bg-green-100 border border-green-400 text-green-800';
                     resultDiv.innerHTML = `
                         <div class="font-bold">Etiqueta OK</div>
